[project]
name = "sql-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "setuptools>=78.1.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sqlparse>=0.5.3",
]
